@@ -14,7 +14,7 @@ Version 2.3.0 - TBD
   This wrapping will only be visible when run under Python3, since it
   emulates "raise ... from ..." syntax. 
   
-  Addresses Issue#4, reported by guswns0528.
+  Addresses Issue #4, reported by guswns0528.
 
 - Added Char class to simplify defining expressions of a single
   character. (Char("abc") is equivalent to Word("abc", exact=1))
@@ -40,12 +40,16 @@ Version 2.3.0 - TBD
   it always returns an empty parse result, the result *can* include
   named results.
   
-  Idea first suggested in Issue#30 by Freakwill.
+  Idea first suggested in Issue #30 by Freakwill.
 
 - Updated FollowedBy to accept expressions that contain named results,
   so that results names defined in the lookahead expression will be 
   returned, even though FollowedBy always returns an empty list.
   Inspired by the same feature implemented in PrecededBy.
+
+- Fixed bug where a parse action that explicitly returned the input
+  ParseResults could add another nesting level if the current expression
+  had a results name. Reported by seron in Issue #22, nice catch!
 
 
 Version 2.2.2 - September, 2018
